--- a/1-amazon/index.html
+++ b/1-amazon/index.html
@@ -119,7 +119,7 @@
                 <!-- rate -->
                 <div class="information-product__rate">
                     <h1 class="rate__title">Apple notebook MacBook Air</h1>
-                    <span>Cinza especial</span>
+                    <span>Cinza espacial</span>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -131,15 +131,54 @@
                 </div>
                 <!-- end rate -->
                 <span class="divisor"></span>
+                <!-- tech info -->
+
+                <div class="tech-info">
+                    <span><strong>Marca</strong></span>
+                    <span>Apple</span>
+                    <span><strong>Modelo</strong></span>
+                    <span>MacBook Air</span>
+                    <span><strong>Tela</strong></span>
+                    <span>13 Polegadas</span>
+                    <span><strong>Cor</strong></span>
+                    <span>Ciza-espacial</span>
+                    <span><strong>Sitema operacional</strong></span>
+                    <span>MacOS</span>
+                    <span><strong>Peso</strong></span>
+                    <span>2 g</span>
+                    <span><strong>Núcleos</strong></span>
+                    <span>8</span>
+                    <span><strong>Capacidade</strong></span>
+                    <span>256GB</span>
+                    <span><strong>Ram</strong></span>
+                    <span>8GB</span>
+                </div>
+
+                <span class="divisor"></span>
+
+                <!-- end tech info -->
             </div>
             <!-- end Infomartion about the product -->
 
-            <!-- tech info -->
-            <!-- end tech info -->
+            <!-- Product price -->
+
+            <div class="price">
+                <span class="price__value">7.799</span>
+                <h2 class="price__text">Em estoque</h2>
+                <button type="button" title="Adicionar ao carrinho" class="price__button add-cart">Adicionar ao carrinho</button>
+                <button type="button" title="Comprar agora" class="price__button buy">Comprar agora</button>
+            </div>
+
+            <!-- end Product price -->
+
 
         </div>
     </main>
     <!-- end main -->
+
+    <!-- scripts -->
+    <script src="public/js/main.js" type="module"></script>
+    <!-- end scripts -->
 </body>
 
 </html>
