Zoom function ended

--- a/1-amazon/index.html
+++ b/1-amazon/index.html
@@ -111,6 +111,7 @@
             <!-- Main image -->
             <div class="main-image">
                 <img src="public/img/m1.jpg" alt="Macbook" class="main-image__image">
+                <div class="result"></div>
             </div>
             <!-- end Main image -->
 
