--- a/1-amazon/index.html
+++ b/1-amazon/index.html
@@ -177,6 +177,12 @@
     </main>
     <!-- end main -->
 
+    <!-- Modal -->
+    <section class="modal">
+        
+    </section>
+    <!-- End Modal -->
+
     <!-- scripts -->
     <script src="public/js/main.js" type="module"></script>
     <!-- end scripts -->
