--- a/1-amazon/index.html
+++ b/1-amazon/index.html
@@ -178,9 +178,12 @@
     <!-- end main -->
 
     <!-- Modal -->
-    <section class="modal">
-        
-    </section>
+    <!-- <section class="modal">
+        <div class="modal__content">
+            <i class="fa-solid fa-xmark"></i>
+            <img src="public/img/m1.jpg" alt="Produto" class="modal__img">
+        </div>
+    </section> -->
     <!-- End Modal -->
 
     <!-- scripts -->
