--- a/1-amazon/index.html
+++ b/1-amazon/index.html
@@ -178,12 +178,12 @@
     <!-- end main -->
 
     <!-- Modal -->
-    <!-- <section class="modal">
+    <section class="modal">
         <div class="modal__content">
-            <i class="fa-solid fa-xmark"></i>
+            <i class="fa-solid fa-xmark close-modal"></i>
             <img src="public/img/m1.jpg" alt="Produto" class="modal__img">
         </div>
-    </section> -->
+    </section>
     <!-- End Modal -->
 
     <!-- scripts -->
