--- a/3_calculator/index.html
+++ b/3_calculator/index.html
@@ -13,7 +13,7 @@
 
         <!-- display -->
         <div class="calculator__display">
-            <input type="text" class="display__input" >
+            <span type="text" class="display__current" ></span>
             <span class="display__previous"></span>
         </div>
         <!-- display -->
@@ -22,22 +22,22 @@
             <button class="clear-button">C</button>
             <button class="parentese-button">()</button>
             <button class="percent-button" value="%">%</button>
-            <button class="divider-button" value="/">/</button>
-            <button value="7">7</button>
-            <button value="8">8</button>
-            <button value="9">9</button>
-            <button value="*" class="multi-button">X</button>
-            <button value="4">4</button>
-            <button value="5">5</button>
-            <button value="6">6</button>
-            <button value="-" class="minus-button">-</button>
-            <button value="1">1</button>
-            <button value="2">2</button>
-            <button value="3">3</button>
-            <button value="+" class="sum-button">+</button>
+            <button class="divider-button op" value="/">/</button>
+            <button value="7" class="primary">7</button>
+            <button value="8" class="primary">8</button>
+            <button value="9" class="primary">9</button>
+            <button value="x" class="multi-button op">x</button>
+            <button value="4" class="primary">4</button>
+            <button value="5" class="primary">5</button>
+            <button value="6" class="primary">6</button>
+            <button value="-" class="minus-button op">-</button>
+            <button value="1" class="primary">1</button>
+            <button value="2" class="primary">2</button>
+            <button value="3" class="primary">3</button>
+            <button value="+" class="sum-button op">+</button>
             <button class="change-sign-button">+/-</button>
-            <button value="0">0</button>
-            <button value=",">,</button>
+            <button value="0" class="primary">0</button>
+            <button value="," class="primary">,</button>
             <button class="equal-button">=</button>
         </div>
 
