Função para validação da operação %

--- a/3_calculator/index.html
+++ b/3_calculator/index.html
@@ -21,7 +21,7 @@
         <div class="buttons">
             <button class="clear-button">C</button>
             <button class="parentese-button">()</button>
-            <button class="percent-button" value="%">%</button>
+            <button class="percent-button op" value="%">%</button>
             <button class="divider-button op" value="/">/</button>
             <button value="7" class="primary">7</button>
             <button value="8" class="primary">8</button>
